--- a/.github/workflows/tdd-tests.yml
+++ b/.github/workflows/tdd-tests.yml
@@ -24,7 +24,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: pgs3cr3t
+          POSTGRES_PASSWORD: postgres
           POSTGRES_DB: testdb
         ports:
           - 5432:5432
@@ -38,7 +38,7 @@ jobs:
     # Steps for the build
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       - name: Install OS dependencies
         run: |
@@ -62,7 +62,7 @@ jobs:
       - name: Run unit tests with green
         run: |
           export FLASK_APP=service:app
-          green
+          green -vvv --processes=1 --run-coverage --termcolor --minimum-coverage=95
         env:
           DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
 
