--- a/.github/workflows/tdd-tests.yml
+++ b/.github/workflows/tdd-tests.yml
@@ -25,8 +25,8 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: testdb
+          POSTGRES_PASSWORD: testdb
+          POSTGRES_DB: postgres
         ports:
           - 5432:5432
         # Set health checks to wait until postgres has started
@@ -65,7 +65,7 @@ jobs:
           export FLASK_APP=service:app
           green -vvv --processes=1 --run-coverage --termcolor --minimum-coverage=95
         env:
-          DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
+          DATABASE_URI: "postgresql://postgres:postgres@postgres:5432/testdb"
 
-      - name: Upload code coverage
-        uses: codecov/codecov-action@v3.1.4
+      # - name: Upload code coverage
+      #   uses: codecov/codecov-action@v3.1.4
