--- a/.github/workflows/tdd-tests.yml
+++ b/.github/workflows/tdd-tests.yml
@@ -25,8 +25,8 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: testdb
-          POSTGRES_DB: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: testdb
         ports:
           - 5432:5432
         # Set health checks to wait until postgres has started
