--- a/.github/workflows/tdd-tests.yml
+++ b/.github/workflows/tdd-tests.yml
@@ -66,5 +66,5 @@ jobs:
         env:
           DATABASE_URI: "postgresql://postgres:postgres@postgres:5432/testdb"
 
-      # - name: Upload code coverage
-      #   uses: codecov/codecov-action@v3.1.4
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v3.1.4
