--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ on:
     - '**.md'
 
 jobs:
-  build:
+  tdd-tests:
     runs-on: ubuntu-latest
     container: python:3.11-slim
 
@@ -68,7 +68,7 @@ jobs:
 
       - name: Upload code coverage
         uses: codecov/codecov-action@v3.1.4
-  build2:
+  bdd-tests:
     runs-on: ubuntu-latest
     container: rofrano/pipeline-selenium:latest
     services:
