Created Updated Wishlist Items BDD + fixed update_form_data function in rest_api.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "cucumberautocomplete.smartSnippets": true,
     "cucumberautocomplete.gherkinDefinitionPart": "@(given|when|then)\\(",
     "cSpell.words": [
+        "idempotency",
         "sqlalchemy"
     ],
 }
