--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -50,7 +50,7 @@
 			]	
 		}
 	},
-	//"postCreateCommand": "",
+	"postCreateCommand": "bash /app/.devcontainer/scripts/install-tools.sh",
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": 8080,
