--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -5,9 +5,9 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: wishlist-app
+    app: wishlists-app
   ports:
     - name: http
       protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 8000
+      targetPort: 8000
