--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -17,21 +17,21 @@ services:
       FLASK_APP: service:app
       FLASK_DEBUG: "True"
       PORT: 8000
-      DATABASE_URI: postgresql://postgres:postgres@postgres:5432/postgres
+      DATABASE_URI: postgresql+psycopg://postgres:postgres@postgres:5432/postgres
     networks:
       - dev
     depends_on:
       - postgres
 
   postgres:
-    image: postgres:alpine
+    image: postgres:15-alpine
     # Uncomment ports to access database from your computer (optional)
     # ports:
     #   - 5432:5432
     environment:
       POSTGRES_PASSWORD: postgres
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql
     networks:
       - dev
 
