--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ flask-restx==1.1.0
 cloudant==2.15.0
 retry==0.9.2
 Flask-SQLAlchemy==3.0.2
-psycopg2==2.9.5
+psycopg[binary]==3.1.12
 python-dotenv==0.21.1
 
 # Runtime tools
@@ -16,14 +16,17 @@ gunicorn==20.1.0
 honcho==1.1.0
 
 # Code quality
-pylint==2.16.2
-flake8==6.0.0
-black==23.1.0
+pylint==2.17.5
+flake8==6.1.0
+black==23.7.0
 
 # Testing dependencies
 green==3.4.3
-factory-boy==3.2.1
-coverage==7.1.0
+pytest==7.4.0
+pytest-pspec==0.0.4
+pytest-cov==4.1.0
+factory-boy==3.3.0
+coverage==7.3.0
 
 # Behavior Driven Development
 behave==1.2.6
@@ -32,4 +35,4 @@ compare==0.2b0
 requests==2.31.0
 
 # Utilities
-httpie==3.2.1
+httpie==3.2.2
