--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
           export FLASK_APP=service:app
           green -vvv --processes=1 --run-coverage --termcolor --minimum-coverage=95
         env:
-          DATABASE_URI: "postgresql://postgres:postgres@postgres:5432/testdb"
+          DATABASE_URI: "postgresql+psycopg://postgres:postgres@postgres:5432/testdb"
 
       - name: Upload code coverage
         uses: codecov/codecov-action@v3.1.4
@@ -107,7 +107,7 @@ jobs:
             curl -i http://localhost:8000/health
             echo "\n*** SERVER IS RUNNING ***"
         env:
-            DATABASE_URI: "postgresql://postgres:postgres@postgres:5432/testdb"
+            DATABASE_URI: "postgresql+psycopg://postgres:postgres@postgres:5432/testdb"
 
       - name: Run Integration Tests
         run: behave
