--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -32,7 +32,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: postgres-creds
-                key: uri
+                key: database_uri
         resources:
           limits:
             cpu: "0.25"
