--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,3 +1,5 @@
+# The petstore database should be created for you, if not here is the command:
+# psql -c "create database petstore;" -U postgres
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -30,7 +32,17 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: postgres-creds
-                  key: postgres_password
+                  key: password
+            - name: POSTGRES_USER
+              valueFrom:
+                  configMapKeyRef:
+                    name: postgres-config
+                    key: postgres_user
+            - name: POSTGRES_DB
+              valueFrom:
+                  configMapKeyRef:
+                    name: postgres-config
+                    key: postgres_db
           resources:
             limits:
               cpu: "0.50"
@@ -51,11 +63,11 @@ metadata:
   name: postgres-pvc
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: ""
+  # storageClassName: default
 
 ---
 apiVersion: v1
@@ -65,8 +77,36 @@ metadata:
   labels:
     app: postgres
 spec:
-  ports:
-  - port: 5432
-    targetPort: 5432
+  type: ClusterIP
   selector:
     app: postgres
+  ports:
+    - port: 5432
+      targetPort: 5432
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-config
+data:
+  postgres_user: postgres
+  postgres_db: postgres 
+---
+# This secret can also be created from the command line using environment variables
+#
+# export DATABASE_URI='postgresql://<place-url-to-database-here>'
+# export POSTGRES_PASSWORD='<place-password-here>'
+#
+# kubectl create secret generic postgres-creds \
+#     --from-literal=password=$POSTGRES_PASSWORD
+#     --from-literal=database_uri=$DATABASE_URI
+#
+apiVersion: v1
+kind: Secret
+metadata:
+  name: postgres-creds
+data:
+  password: cG9zdGdyZXM=
+  database_uri: |
+      cG9zdGdyZXNxbCtwc3ljb3BnOi8vcG9zdGdyZXM6cG9zdGdyZXNAcG9zdGdyZXM6NTQzMi9wb3N0Z3Jlcw==
