--- a/k8s/pv.yaml
+++ b/k8s/pv.yaml
@@ -7,6 +7,7 @@ spec:
     storage: 1Gi
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Recycle
   hostPath:
     path: /data/pv0001
   storageClassName: ""
