Adds a json schema to avoid annoying validation false positives on the tekton yaml files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
     "cSpell.words": [
         "sqlalchemy"
     ],
+    "yaml.schemas": {
+        "https://json.schemastore.org/yamllint.json": "*.yaml",
+    },
 }
 
