--- a/.tekton/events/trigger_binding.yaml
+++ b/.tekton/events/trigger_binding.yaml
@@ -8,5 +8,7 @@ spec:
     value: $(body.repository.url)
   - name: git-repo-name
     value: $(body.repository.name)
+  - name: git-ref
+    value: $(body.ref)
   - name: git-revision
     value: $(body.head_commit.id)
