Updates Deployment to use old_image name which will be replaced by IMAGE param in deploy-image task.

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       restartPolicy: Always
       containers:
-      - image: k3d-registry.local:32000/wishlists:1.0
+      - image: k3d-registry.local:32000/wishlists:latest
         imagePullPolicy: IfNotPresent
         name: wishlists-app
         ports:
