--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: postgres
 spec:
-  serviceName: postgres-service
+  serviceName: postgres
   replicas: 1
   selector:
     matchLabels:
@@ -73,7 +73,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-service
+  name: postgres
   labels:
     app: postgres
 spec:
